# targets

./: .gitignore  .travis.yml  Cargo.toml  README.md  cli.rs  continuous-fuzzing-with-honggfuzz.rb  continuous-fuzzing-with-libfuzzer.rb  continuous-fuzzing.rb  fuzz-with-afl.sh  fuzz-with-honggfuzz.sh  fuzz-with-libfuzzer.sh  gen-targets-src.sh  run-fuzzer.sh  targets.txt  test.sh
brotli/: Cargo.toml  read_bytes.rs
brotli/seeds/: 0002
bson/: Cargo.toml  read_bson.rs
chrono/: Cargo.toml  read_dates.rs
common/: Cargo.toml
common/seeds/: serde_json_read  serde_yaml_read_write_read
common/seeds/brotli_read/: 0001
common/seeds/humantime_read/: 0001  0003
common/seeds/iso8601_read/: 0001  0007  0009  0010
common/seeds/patch_read/: 00002
common/seeds/rsass_sass/: _base.scss
common/seeds/rsass_value/: border  math  percent
common/seeds/serde_json/: 0001.json  0002.json
common/seeds/serde_yaml/: 0001
common/seeds/toml_roundtrip/valid/: comments-everywhere.toml  string-escapes.toml
common/src/: lib.rs
crypto-hashes/: Cargo.toml  blake2b.rs  blake2s.rs  gost94.rs  groestl_256.rs  groestl_512.rs  md2.rs  md4.rs  md5.rs  ripemd160.rs  sha1.rs  sha2_256.rs  sha2_512.rs  sha3_512.rs  sha3_keccak512.rs  sha3_shake256.rs  streebog_256.rs  streebog_512.rs  whirlpool.rs
cssparser/: Cargo.toml  css_read_write_read.rs  read_css.rs
deflate/: Cargo.toml  compress.rs
dns-parser/: Cargo.toml  read_packet.rs
encoding_rs/: Cargo.toml  read_text.rs
flac/: Cargo.toml  read_flac.rs
fuzzer-afl/: Cargo.toml  template.rs
fuzzer-honggfuzz/: Cargo.toml  template.rs
fuzzer-honggfuzz/src/: lib.rs
fuzzer-libfuzzer/: Cargo.toml  template.rs
html5ever/: Cargo.toml  read_html.rs
html5ever/seeds/: 0001  0002
httparse/: Cargo.toml  parse_request.rs  parse_response.rs
humantime/: Cargo.toml  read_time.rs
humantime/seeds/: 0002
image/: Cargo.toml  read_gif.rs  read_image.rs  read_jpeg.rs  read_png.rs  read_write_read_png.rs
image/seeds/: 0010.tiff  0011.tiff
iso8601/: Cargo.toml  read_dates.rs
iso8601/seeds/: 0002  0004  0005  0008
lz4-compress/: Cargo.toml  compress.rs  decompress.rs
minidump/: Cargo.toml  read.rs
mp4parse/: Cargo.toml  read_mp4.rs
patch/: Cargo.toml  read_patch.rs
patch/seeds/: 00001
pikkr/: Cargo.toml  parse.rs
pulldown-cmark/: Cargo.toml  read_markdown.rs
quick-xml/: Cargo.toml  read_xml.rs
regex/: Cargo.toml  is_match.rs
ring/: Cargo.toml  digest-sha1-openssl.rs  digest-sha256-openssl.rs  digest-sha384-openssl.rs  digest-sha512-openssl.rs
rustc-syntax/: Cargo.toml  lexer-read.rs
rustfmt/: Cargo.toml  fmt.rs
semver/: Cargo.toml  version_read_write_read.rs  version_req_read_write_read.rs
serde_json/: Cargo.toml  read_json.rs  read_write_read.rs
serde_yaml/: Cargo.toml  read.rs  read_write_read.rs
serde_yaml/seeds/: 0002
tar/: Cargo.toml  read_tar.rs  roundtrip_tar.rs
toml/: Cargo.toml  read_toml.rs
toml/seeds/: 0001  0002  0003  0004
toml/seeds/invalid/: table-array-implicit.toml
toml/seeds/valid/: multiline-string.toml  raw-string.toml
uuid/: Cargo.toml  read_uuid.rs
xml-rs/: Cargo.toml  read_xml.rs
zip/: Cargo.toml  read.rs
zopfli/: Cargo.toml  compress.rs
