[workspace]
members = [
    "brotli",
    "bson",
    "chrono",
    # "crypto-hashes",
    "cssparser",
    "deflate",
    "dns-parser",
    "encoding_rs",
    "flac",
    "httparse",
    "humantime",
    "image",
    "iso8601",
    "lz4-compress",
    "mp4parse",
    "pulldown-cmark",
    "quick-xml",
    "regex",
    "ring",
    # "rustfmt",
    "semver",
    "serde_json",
    "serde_yaml",
    "tar",
    "toml",
    "uuid",
    "xml-rs",
    "zopfli",
]
