[workspace]
members = [
    "brotli",
    "bson",
    "chrono",
    # "crypto-hashes",
    "cssparser",
    "deflate",
    "dns-parser",
    "encoding_rs",
    "flac",
    "html5ever",
    "httparse",
    "humantime",
    "image",
    "iso8601",
    "lz4-compress",
    "mp4parse",
    "patch",
    "pulldown-cmark",
    "quick-xml",
    "regex",
    "ring",
    # "rustfmt",
    "semver",
    "serde_json",
    "serde_yaml",
    "tar",
    "toml",
    "uuid",
    "xml-rs",
    "zip",
    "zopfli",
]
