[package]
name = "fuzz-targets-common"
version = "0.1.0"
authors = ["The rust-fuzz Project Developers"]

[dependencies]
openssl = "0.10.26"

blake2 = { git = "https://github.com/RustCrypto/hashes" }
brotli = { git = "https://github.com/dropbox/rust-brotli" }
bson = { git = "https://github.com/zonyitoo/bson-rs" }
chrono = { git = "https://github.com/chronotope/chrono" }
cssparser = { git = "https://github.com/servo/rust-cssparser.git" }
deflate = { git = "https://github.com/oyvindln/deflate-rs", branch = "dev" }
dns-parser = { git = "https://github.com/tailhook/dns-parser" }
flac = { git = "https://github.com/sourrust/flac.git" }
gif = { git = "https://github.com/image-rs/image-gif" }
gost94 = { git = "https://github.com/RustCrypto/hashes" }
groestl = { git = "https://github.com/RustCrypto/hashes" }
html5ever = { git = "https://github.com/servo/html5ever" }
httparse = { git = "https://github.com/seanmonstar/httparse" }
http = { git = "https://github.com/hyperium/http" }
humantime = { git = "https://github.com/tailhook/humantime" }
image = { git = "https://github.com/image-rs/image" }
iso8601 = { git = "https://github.com/badboy/iso8601" }
jpeg-decoder = { git = "https://github.com/kaksmet/jpeg-decoder" }
lewton = { git = "https://github.com/RustAudio/lewton" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever" }
md2 = { git = "https://github.com/RustCrypto/hashes" }
md4 = { git = "https://github.com/RustCrypto/hashes" }
md-5 = { git = "https://github.com/RustCrypto/hashes" }
minidump = { git = "https://github.com/luser/rust-minidump.git" }
mp4parse = { git = "https://github.com/mozilla/mp4parse-rust" }
obj-rs = { git = "https://github.com/simnalamburt/obj-rs" }
ogg = { git = "https://github.com/RustAudio/ogg" }
patch = { git = "https://github.com/uniphil/patch-rs" }
pikkr = { git = "https://github.com/pikkr/pikkr" }
png = { git = "https://github.com/image-rs/image-png" }
proc-macro2 = { git = "https://github.com/alexcrichton/proc-macro2.git" }
pulldown-cmark = { git = "https://github.com/google/pulldown-cmark.git" }
quick-xml = { git = "https://github.com/tafia/quick-xml" }
regex = { git = "https://github.com/rust-lang-nursery/regex" }
regex-syntax = { git = "https://github.com/rust-lang-nursery/regex" }
resvg = { git = "https://github.com/RazrFalcon/resvg" }
ring = { git = "https://github.com/briansmith/ring" }
ripemd160 = { git = "https://github.com/RustCrypto/hashes" }
rsass = { git = "https://github.com/kaj/rsass" }
semver = { git = "https://github.com/steveklabnik/semver" }
serde_json = { git = "https://github.com/serde-rs/json", features = ["arbitrary_precision"] }
serde_yaml = { git = "https://github.com/dtolnay/serde-yaml" }
sha-1 = { git = "https://github.com/RustCrypto/hashes" }
sha2 = { git = "https://github.com/RustCrypto/hashes" }
sha3 = { git = "https://github.com/RustCrypto/hashes" }
sleep-parser = { git = "https://github.com/datrs/sleep-parser" }
streebog = { git = "https://github.com/RustCrypto/hashes" }
svgdom = { git = "https://github.com/RazrFalcon/svgdom" }
svgtypes = { git = "https://github.com/RazrFalcon/svgtypes" }
tar = { git = "https://github.com/alexcrichton/tar-rs" }
toml = { git = "https://github.com/alexcrichton/toml-rs" }
url = { git = "https://github.com/servo/rust-url" }
uuid = { git = "https://github.com/rust-lang-nursery/uuid" }
whirlpool = { git = "https://github.com/RustCrypto/hashes" }
xmlparser = { git = "https://github.com/RazrFalcon/xmlparser" }
xml-rs = { git = "https://github.com/netvl/xml-rs.git" }
zip = { git = "https://github.com/mvdnes/zip-rs" }
zopfli = { git = "https://github.com/carols10cents/zopfli" }
