[package]
name = "crypto-hashes-targets"
version = "0.0.0"
publish = false

[dependencies]
crypto-hashes = { features = ["include_weak"], git = "https://github.com/RustCrypto/meta" }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }
generic-array = "0.7"

[[bin]]
name = "blake2b"
path = "blake2b.rs"

[[bin]]
name = "blake2s"
path = "blake2s.rs"

[[bin]]
name = "gost94"
path = "gost94.rs"

[[bin]]
name = "md2"
path = "md2.rs"

[[bin]]
name = "md4"
path = "md4.rs"

[[bin]]
name = "md5"
path = "md5.rs"

[[bin]]
name = "ripemd160"
path = "ripemd160.rs"

[[bin]]
name = "sha1"
path = "sha1.rs"

[[bin]]
name = "sha2_256"
path = "sha2_256.rs"

[[bin]]
name = "sha2_512"
path = "sha2_512.rs"

[[bin]]
name = "sha3_512"
path = "sha3_512.rs"

[[bin]]
name = "sha3_keccak512"
path = "sha3_keccak512.rs"

[[bin]]
name = "sha3_shake256"
path = "sha3_shake256.rs"

[[bin]]
name = "streebog_256"
path = "streebog_256.rs"

[[bin]]
name = "streebog_512"
path = "streebog_512.rs"

[[bin]]
name = "whirlpool"
path = "whirlpool.rs"

