[package]
name = "cssparser-targets"
version = "0.0.0"
publish = false

[dependencies]
cssparser = { git = "https://github.com/servo/rust-cssparser.git" }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

[[bin]]
name = "css_read"
path = "css_read.rs"

[[bin]]
name = "css_read_write_read"
path = "css_read_write_read.rs"
