[package]
name = "httparse-targets"
version = "0.0.0"
publish = false

[dependencies]
httparse = { git = "https://github.com/seanmonstar/httparse" }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

[[bin]]
name = "parse_request"
path = "parse_request.rs"

[[bin]]
name = "parse_response"
path = "parse_response.rs"
