[package]
name = "lz4-compress-targets"
version = "0.0.0"
publish = false

[dependencies]
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }
lz4-compress = { git = "https://github.com/ticki/tfs" }

[[bin]]
name = "compress"
path = "compress.rs"

[[bin]]
name = "decompress"
path = "decompress.rs"
