[package]
name = "tar-targets"
version = "0.0.0"
publish = false

[dependencies]
tar = { git = "https://github.com/alexcrichton/tar-rs" }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

[[bin]]
name = "read_tar"
path = "read_tar.rs"

[[bin]]
name = "roundtrip_tar"
path = "roundtrip_tar.rs"
